--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="assets/MSfavicon.ico" type="image/x-icon" />
     <title>Microsoft - Cloud, Computers, Apps &amp; Gaming</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
 <div class="container mx-auto">
