--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             </div>
         </div>
 
-        <div class="leftl flex items-center space-x-5 mx-14">
+        <div class="leftl hidden lg:flex items-center space-x-5 mx-14">
             <p class="text-[0.7rem] hover:cursor-pointer hover:underline">Contact Microsoft</p>
             <p class="text-[0.7rem] hover:cursor-pointer hover:underline">Privacy</p>
             <p class="text-[0.7rem] hover:cursor-pointer hover:underline">Terms of use</p>
